inc = include_directories('.')
headers = files([
    'arraylist.h',
    'avl-tree.h',
    'binary-heap.h',
    'binomial-heap.h',
    'bloom-filter.h',
    'compare-int.h',
    'compare-pointer.h',
    'compare-string.h',
    'hash-int.h',
    'hash-pointer.h',
    'hash-string.h',
    'hash-table.h',
    'list.h',
    'queue.h',
    'rb-tree.h',
    'set.h',
    'slist.h',
    'sortedarray.h',
    'trie.h'
])

install_headers(headers, subdir: 'calg')